@@ -2,6 +2,7 @@ v0.2.6, 2011-05-?? -- Hadoop 0.20 in EMR, inline runner, and more
  * Set Hadoop to run on EMR with --hadoop-version (Issue #71).
    * Default is still 0.18, but will change to 0.20 in mrjob v0.3.0.
  * New inline runner, for testing locally with a debugger
+ * New --strict-protocols option, to catch unencodable data (Issue #76)
  * Added steps_python_bin option (for use with virtualenv)
  * mrjob no longer chokes when asked to run on an EMR job flow running 
    Hadoop 0.20 (Issue #110)
